test/ddc-main/30-CoreTetra/22-Typing/01-Names/Test.stdout.check
ok

-- Error: Type varaible not in environment.
When checking type.
  Undefined type variable: a


-- Error: Type constructor not in environment.
When checking type.
  Undefined type constructor: Whatever


-- Error: Data constructor not in environment.
When checking expression.
  <batch>:12:2
  Undefined data constructor: Whatever


-- Error: Type constructor used as a data constructor.
While parsing.
  Parse error in "<batch>" (line 1, column 1)
  Unexpected constructor "Unit".
  Expected an expression.


-- Error: Data constructor used as a type constructor.
While parsing.
  Parse error in "<batch>" (line 1, column 1)
  Unexpected constructor "()".
  Expected a type.


-- Error: Type variable used as a value variable.
When checking expression.
  <batch>:24:27
  Undefined value variable: a
